让 iframe 充满整个父页面、去掉 iframe 的边框，让 webview 和 vscode 融为一体

--- a/webview-ui/src/App.css
+++ b/webview-ui/src/App.css
@@ -5,7 +5,8 @@ main {
   align-items: flex-start;
   height: 100%;
   color: var(--vscode-editor-foreground);
-  border: 1px solid;
-  border-color: brown;
-  margin: 0;
+}
+
+h1 {
+  margin: 0 auto;
 }
